			4 different variants that race helps select
		Talk to the travelling wizard to open a portal to a branch
		Five branches with unique prizes and enemies
			Ice Caves
				Fight the abominable snowman for the
				abominable veil
					cold res cloak of discplacement
			Black Forest
				Fight the tulip poplar for the poplar punisher
					+2d6 dmg quarterstaff
			Gnomish Mines
			Dismal Swamp
				Fight Kroo the Kobold King and his court
					very fast speed ring of poison
					resistance
			Archipelago
				Fight the ancient something and his tentacles
					emerald with slotless magical
					breathing and swimming
		Go play and find out!
	Replace sokoban with lokobanv2
		Single soko level with a few crates, no pits, and a lokoban pinata
		Lokoban pinata 
			doesn't move, no attacks
			on death, scatters
				3 wands and rings
				30 random food items
				500 gold
				either a bag of holding, amulet of reflection, or more gold
					depends on what you already have
			has like 1.4-1.5k hp
			can be instakilled if you play the pinata game properly
	Neutral Quest changes
		Branch to spire from the spire in the outlands.
		At the top is the sigil with stores and the lady of pain who
		carries the Cage key.
			At the sigil is also Fell, the tattoo master who sells
			tats.
				hourglass
					increases speed by 1
					available for ana's and acu 
					$3000
				falchion
					just gives +1 base dice to slashing weapons
					available for those who wield a slashing weapon
					$2000
				kestrel 
					1/20 of the time another random multishot with any item
					available for those wielding a bow or rangers
					$3000
				bulwark
					+1 ac
					for anyone
					$1500
				fountain 
					1/30 pw regen boost
					for anyone
					 $2000
				Croesus family crest
					gold in open inventory weighs nothing.
					available for someone wearing all gold chest,gloves,boot,helm 
					$30000
				Blasphemous shapes
					grants intrinsic polymorphitis
					must have u.regifted be 5, 
					$8000