@@ -44,6 +44,7 @@ angel_hell_vault AND ancient_hell_vault AND tanninim_hell_vault,There are a lot 
 bokrug_ascension,Detestable gods,Completed Bokrug's ascension ritual,x,Bokrug statue over water
 notdNetHack,,,,
 get_kroo,Kroo's Bling,Acquire the dismal swamp completion prize.,,
+get_raggo,Pet Rock,Acquire the gnomish mines completion prize.,uses same image as luckstone,
 get_poplar,Punishing Poplars,Acquire the black forest completion prize.,,
 get_abominable,Snowplow,Acquire the ice caves completion prize.,,
 get_gilly,Gillywhatnow,Acquire the archipelago completion prize.,,
